Fixes homepage whitespace bug

--- a/frontend/src/assets/styles/theme.scss
+++ b/frontend/src/assets/styles/theme.scss
@@ -95,6 +95,10 @@ p {
   justify-content: space-between;
 }
 
+.landing-page {
+  padding: 0;
+}
+
 .header {
   padding: 2rem;
   width: 100%;
